<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:rotationX="360"
        android:src="@drawable/yuanb" 
        android:contentDescription="@string/description"/>

    <Button
        android:id="@+id/celebrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:text="@string/button7"
        android:textColor="#Ff0000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="24dp"
        android:text="@string/button11"
        android:textColor="#FF0000" />

    <Button
        android:id="@+id/take_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/exchange"
        android:layout_alignBottom="@+id/exchange"
        android:layout_alignParentRight="true"
        android:text="@string/button12"
        android:textColor="#FF0000" />

</RelativeLayout>
