<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/intrduce2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:text="@string/textview5"
        android:textColor="#FF0000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/greeting"
        android:textColor="#FF0000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/greeting"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="68dp"
        android:layout_marginLeft="32dp"
        android:text="@string/button9" />

    <Button
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/picture"
        android:layout_alignBottom="@+id/picture"
        android:layout_alignRight="@+id/greeting"
        android:layout_marginRight="24dp"
        android:text="@string/button10" />

</RelativeLayout>