<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/choose2"
        android:scaleType="fitCenter"
        android:src="@drawable/wbtp1" 
        android:contentDescription="@string/description"
        />

    <Button
        android:id="@+id/digbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:paddingRight="30sp"
        android:text="@string/button1"
        android:textColor="#FF0000"
        android:textSize="20sp"
         />

    <TextView
        android:id="@+id/choose2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textColor="#FF0000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/paybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/digbutton"
        android:layout_alignBottom="@+id/digbutton"
        android:layout_alignRight="@+id/imageView1"
        android:text="@string/bottob2"
        android:textColor="#FF0000"
        android:textSize="20sp" />

</RelativeLayout>